--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app{
   min-height: 100vh;
+  background: rgb(111, 172, 192);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+
+.tweet{
+  height: 300px;
+  width: 300px;
+  background-color: white;
+  border-radius: 30px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+.red {
+  min-height: 100vh;
+  background: rgb(187, 56, 56);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.changerDesign{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 16px;
+  border-radius: 10px;
+  align-items: center;
+  background-color: white
+
 }
